--- a/cryptoios/cryptoios/ViewControlelrs/IdolLink/IdolLinkCell.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/IdolLink/IdolLinkCell.xib
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="IdolCell" id="gTV-IL-0wX" customClass="IdolLinkCell" customModule="cryptoios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="261" height="468"/>
+            <rect key="frame" x="0.0" y="0.0" width="195" height="353"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="261" height="468"/>
+                <rect key="frame" x="0.0" y="0.0" width="195" height="353"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FR5-kv-5BT">
-                        <rect key="frame" x="0.0" y="0.0" width="261" height="440"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="girdcards/card_block" translatesAutoresizingMaskIntoConstraints="NO" id="FR5-kv-5BT">
+                        <rect key="frame" x="0.0" y="0.0" width="195" height="325"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rcb-TO-Ti2">
-                        <rect key="frame" x="0.0" y="440" width="261" height="28"/>
+                        <rect key="frame" x="0.0" y="325" width="195" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="JtX-n9-wAk"/>
                         </constraints>
@@ -42,11 +42,15 @@
                 <constraint firstItem="rcb-TO-Ti2" firstAttribute="top" secondItem="FR5-kv-5BT" secondAttribute="bottom" id="sMf-Ig-fFJ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="195" height="353"/>
             <connections>
                 <outlet property="cardImageView" destination="FR5-kv-5BT" id="5dK-Gi-1rd"/>
                 <outlet property="titleLabel" destination="rcb-TO-Ti2" id="Jzv-IA-NAU"/>
             </connections>
-            <point key="canvasLocation" x="129.59999999999999" y="149.32533733133434"/>
+            <point key="canvasLocation" x="76" y="97.601199400299862"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="girdcards/card_block" width="522" height="880"/>
+    </resources>
 </document>
