--- a/cryptoios/cryptoios/ViewControlelrs/Sanguo/Wiki/SanguoWikiViewController.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Sanguo/Wiki/SanguoWikiViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SanguoWikiViewController" customModule="cryptoios" customModuleProvider="target">
             <connections>
-                <outlet property="collectionView" destination="GZg-AY-wNP" id="nkZ-F5-4W4"/>
+                <outlet property="tableView" destination="wvx-KQ-d9L" id="C0E-yk-uu9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,27 +20,102 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="GZg-AY-wNP">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wvx-KQ-d9L">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Bci-Jv-Cgg">
-                        <size key="itemSize" width="320" height="86"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
+                    <view key="tableHeaderView" contentMode="scaleToFill" id="30I-Ti-miD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMb-Xj-glq">
+                                <rect key="frame" x="10" y="0.0" width="60" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="vI7-hL-Bmk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="综合" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0XK-Ie-VjP">
+                                <rect key="frame" x="80" y="0.0" width="42" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="wKW-0u-JXb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="武力" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6i-Wa-1ee">
+                                <rect key="frame" x="132" y="0.0" width="42" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="ena-OH-IMe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智力" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yv-Xt-yoM">
+                                <rect key="frame" x="184" y="0.0" width="42" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="acF-Mc-g3l"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="政治" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zs1-eW-8xF">
+                                <rect key="frame" x="236" y="0.0" width="42" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="WqV-sy-7xF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="魅力" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAr-uX-Cuk">
+                                <rect key="frame" x="288" y="0.0" width="42" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="EiI-sa-kZN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sMb-Xj-glq" firstAttribute="top" secondItem="30I-Ti-miD" secondAttribute="top" id="1GE-bP-eie"/>
+                            <constraint firstItem="0XK-Ie-VjP" firstAttribute="leading" secondItem="sMb-Xj-glq" secondAttribute="trailing" constant="10" id="3sd-xp-bec"/>
+                            <constraint firstAttribute="bottom" secondItem="PAr-uX-Cuk" secondAttribute="bottom" id="Buw-9J-bA2"/>
+                            <constraint firstItem="H6i-Wa-1ee" firstAttribute="top" secondItem="30I-Ti-miD" secondAttribute="top" id="FNn-Sf-rGy"/>
+                            <constraint firstAttribute="bottom" secondItem="Zs1-eW-8xF" secondAttribute="bottom" id="Ndk-lI-E5e"/>
+                            <constraint firstItem="Zs1-eW-8xF" firstAttribute="leading" secondItem="3yv-Xt-yoM" secondAttribute="trailing" constant="10" id="Qem-hm-Rie"/>
+                            <constraint firstItem="Zs1-eW-8xF" firstAttribute="top" secondItem="30I-Ti-miD" secondAttribute="top" id="X0C-xh-7T3"/>
+                            <constraint firstItem="3yv-Xt-yoM" firstAttribute="top" secondItem="30I-Ti-miD" secondAttribute="top" id="eXR-KW-cMv"/>
+                            <constraint firstAttribute="bottom" secondItem="sMb-Xj-glq" secondAttribute="bottom" id="feO-0x-wmb"/>
+                            <constraint firstAttribute="bottom" secondItem="3yv-Xt-yoM" secondAttribute="bottom" id="hW0-z8-tit"/>
+                            <constraint firstItem="0XK-Ie-VjP" firstAttribute="top" secondItem="30I-Ti-miD" secondAttribute="top" id="kqt-uw-8hJ"/>
+                            <constraint firstItem="PAr-uX-Cuk" firstAttribute="leading" secondItem="Zs1-eW-8xF" secondAttribute="trailing" constant="10" id="pZu-Eo-mb0"/>
+                            <constraint firstItem="sMb-Xj-glq" firstAttribute="leading" secondItem="30I-Ti-miD" secondAttribute="leading" constant="10" id="r0R-6o-cJC"/>
+                            <constraint firstItem="H6i-Wa-1ee" firstAttribute="leading" secondItem="0XK-Ie-VjP" secondAttribute="trailing" constant="10" id="sWL-7t-SI1"/>
+                            <constraint firstAttribute="bottom" secondItem="H6i-Wa-1ee" secondAttribute="bottom" id="tiG-ka-m8u"/>
+                            <constraint firstItem="3yv-Xt-yoM" firstAttribute="leading" secondItem="H6i-Wa-1ee" secondAttribute="trailing" constant="10" id="vOk-3s-NbA"/>
+                            <constraint firstAttribute="bottom" secondItem="0XK-Ie-VjP" secondAttribute="bottom" id="vgS-NL-XWu"/>
+                            <constraint firstItem="PAr-uX-Cuk" firstAttribute="top" secondItem="30I-Ti-miD" secondAttribute="top" id="vzW-Ck-xFW"/>
+                        </constraints>
+                    </view>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="b9o-oi-Ti6"/>
-                        <outlet property="delegate" destination="-1" id="qv0-gc-FY5"/>
+                        <outlet property="dataSource" destination="-1" id="CJc-Wr-zVj"/>
+                        <outlet property="delegate" destination="-1" id="5Rd-Xd-gJF"/>
                     </connections>
-                </collectionView>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="GZg-AY-wNP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="MZG-A0-8OU"/>
-                <constraint firstItem="GZg-AY-wNP" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="Psl-d8-HNj"/>
-                <constraint firstItem="GZg-AY-wNP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="UVL-vs-Q8m"/>
-                <constraint firstItem="GZg-AY-wNP" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="u5r-HA-gN9"/>
+                <constraint firstItem="wvx-KQ-d9L" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="6t8-d0-2nr"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="wvx-KQ-d9L" secondAttribute="trailing" id="78n-hW-SfI"/>
+                <constraint firstItem="wvx-KQ-d9L" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Azx-6k-kWB"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="wvx-KQ-d9L" secondAttribute="bottom" id="MYN-aR-Xnf"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="130.40000000000001" y="142.57871064467767"/>
