--- a/cryptoios/cryptoios/ViewControlelrs/IdolLink/Rank/IdolRankViewController.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/IdolLink/Rank/IdolRankViewController.xib
@@ -19,37 +19,75 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <view key="tableHeaderView" contentMode="scaleToFill" id="Gfc-Yv-feG">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="111"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="钱包地址" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3nQ-W7-1vZ">
-                        <rect key="frame" x="119" y="10" width="136" height="39"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="合成时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8R3-nl-yxC">
-                        <rect key="frame" x="263" y="11" width="99" height="39"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="名次" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1A4-ay-aTA">
-                        <rect key="frame" x="12" y="8" width="99" height="39"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ranking-background" translatesAutoresizingMaskIntoConstraints="NO" id="rF0-8T-Gp0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="111"/>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6fv-mb-C2R">
+                        <rect key="frame" x="0.0" y="76" width="375" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名次" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1A4-ay-aTA">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="gYh-3a-7Ec"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="钱包地址" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3nQ-W7-1vZ">
+                                <rect key="frame" x="100" y="0.0" width="175" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="合成时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8R3-nl-yxC">
+                                <rect key="frame" x="275" y="0.0" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="mgb-2S-v7y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.59215686274509804" green="0.80000000000000004" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3nQ-W7-1vZ" firstAttribute="leading" secondItem="1A4-ay-aTA" secondAttribute="trailing" id="5gf-Fr-twI"/>
+                            <constraint firstItem="1A4-ay-aTA" firstAttribute="leading" secondItem="6fv-mb-C2R" secondAttribute="leading" id="AYx-iM-B5X"/>
+                            <constraint firstAttribute="trailing" secondItem="8R3-nl-yxC" secondAttribute="trailing" id="FiQ-c0-tzC"/>
+                            <constraint firstItem="8R3-nl-yxC" firstAttribute="leading" secondItem="3nQ-W7-1vZ" secondAttribute="trailing" priority="999" id="JXR-C5-OnK"/>
+                            <constraint firstItem="1A4-ay-aTA" firstAttribute="top" secondItem="6fv-mb-C2R" secondAttribute="top" id="MMd-ks-a24"/>
+                            <constraint firstAttribute="bottom" secondItem="3nQ-W7-1vZ" secondAttribute="bottom" id="Nlv-JT-7D3"/>
+                            <constraint firstAttribute="height" constant="30" id="WMI-73-IFK"/>
+                            <constraint firstAttribute="bottom" secondItem="1A4-ay-aTA" secondAttribute="bottom" id="YRe-pm-xf3"/>
+                            <constraint firstItem="8R3-nl-yxC" firstAttribute="top" secondItem="6fv-mb-C2R" secondAttribute="top" id="pZN-Cz-Ltz"/>
+                            <constraint firstAttribute="bottom" secondItem="8R3-nl-yxC" secondAttribute="bottom" id="r7P-RI-5qb"/>
+                            <constraint firstItem="3nQ-W7-1vZ" firstAttribute="top" secondItem="6fv-mb-C2R" secondAttribute="top" id="xN6-O6-z3x"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="6fv-mb-C2R" secondAttribute="bottom" constant="5" id="HTN-YC-utu"/>
+                    <constraint firstAttribute="trailing" secondItem="rF0-8T-Gp0" secondAttribute="trailing" id="S7Z-gR-fOy"/>
+                    <constraint firstAttribute="trailing" secondItem="6fv-mb-C2R" secondAttribute="trailing" id="T2H-N6-HNV"/>
+                    <constraint firstItem="6fv-mb-C2R" firstAttribute="leading" secondItem="Gfc-Yv-feG" secondAttribute="leading" id="V34-ew-RZ8"/>
+                    <constraint firstItem="rF0-8T-Gp0" firstAttribute="leading" secondItem="Gfc-Yv-feG" secondAttribute="leading" id="eoG-42-0Ty"/>
+                    <constraint firstAttribute="bottom" secondItem="rF0-8T-Gp0" secondAttribute="bottom" id="jUc-QS-onL"/>
+                    <constraint firstItem="rF0-8T-Gp0" firstAttribute="top" secondItem="Gfc-Yv-feG" secondAttribute="top" id="mks-dY-y6Z"/>
+                </constraints>
             </view>
             <connections>
                 <outlet property="dataSource" destination="-1" id="ng6-sY-LTA"/>
                 <outlet property="delegate" destination="-1" id="WLe-nN-TxD"/>
             </connections>
+            <point key="canvasLocation" x="50.399999999999999" y="60.719640179910051"/>
         </tableView>
     </objects>
+    <resources>
+        <image name="ranking-background" width="1920" height="460"/>
+    </resources>
 </document>
