--- a/cryptoios/cryptoios/ViewControlelrs/Moe/MoeCardDetailViewController.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Moe/MoeCardDetailViewController.xib
@@ -38,14 +38,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="MOH-We-PZP">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="1537"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="1450"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n1F-jy-iYK">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="1537"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="1450"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="znZ-qg-T39" userLabel="Content View">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="1600"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="1450"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="moe_cards/1" translatesAutoresizingMaskIntoConstraints="NO" id="ptY-Go-Aq9">
                                     <rect key="frame" x="20" y="20" width="335" height="474.5"/>
@@ -477,12 +477,12 @@
                                 <constraint firstItem="eYA-ZR-AYo" firstAttribute="top" secondItem="eLx-kA-XkH" secondAttribute="bottom" constant="10" id="Rby-aW-hqZ"/>
                                 <constraint firstAttribute="trailing" secondItem="L4M-bN-GaN" secondAttribute="trailing" constant="20" id="W12-gR-blX"/>
                                 <constraint firstAttribute="trailing" secondItem="RIv-Ph-npV" secondAttribute="trailing" constant="20" id="Wx7-ij-CKW"/>
-                                <constraint firstAttribute="height" constant="1600" id="ZqZ-e9-Geu"/>
                                 <constraint firstItem="quI-tM-TKI" firstAttribute="top" secondItem="ewQ-Qx-SNp" secondAttribute="bottom" constant="8" id="bT9-U9-kcM"/>
                                 <constraint firstItem="L4M-bN-GaN" firstAttribute="leading" secondItem="znZ-qg-T39" secondAttribute="leading" constant="20" id="bY3-zY-jqq"/>
                                 <constraint firstAttribute="trailing" secondItem="eLx-kA-XkH" secondAttribute="trailing" constant="10" id="btI-mV-qUO"/>
                                 <constraint firstItem="mtb-wE-pPn" firstAttribute="centerY" secondItem="ewQ-Qx-SNp" secondAttribute="centerY" id="cFh-Rh-43T"/>
                                 <constraint firstItem="2ij-X8-rfl" firstAttribute="centerY" secondItem="ewQ-Qx-SNp" secondAttribute="centerY" id="cIs-IA-GuK"/>
+                                <constraint firstAttribute="bottom" secondItem="bOW-D3-n8E" secondAttribute="bottom" constant="23" id="ctZ-mL-dlu"/>
                                 <constraint firstItem="ptY-Go-Aq9" firstAttribute="leading" secondItem="znZ-qg-T39" secondAttribute="leading" constant="20" id="dES-nl-a5v"/>
                                 <constraint firstItem="H9D-Ox-Eos" firstAttribute="leading" secondItem="znZ-qg-T39" secondAttribute="leading" constant="10" id="fuu-dg-gVQ"/>
                                 <constraint firstAttribute="trailing" secondItem="H9D-Ox-Eos" secondAttribute="trailing" constant="10" id="ltv-Ec-pZq"/>
@@ -497,20 +497,21 @@
                         </view>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="znZ-qg-T39" firstAttribute="centerX" secondItem="n1F-jy-iYK" secondAttribute="centerX" id="3Eu-Gr-2R7"/>
                         <constraint firstAttribute="trailing" secondItem="znZ-qg-T39" secondAttribute="trailing" id="Lo1-Dt-JDn"/>
                         <constraint firstItem="znZ-qg-T39" firstAttribute="leading" secondItem="n1F-jy-iYK" secondAttribute="leading" id="aev-Cq-GK3"/>
                         <constraint firstItem="znZ-qg-T39" firstAttribute="top" secondItem="n1F-jy-iYK" secondAttribute="top" id="ijd-5A-dc0"/>
-                        <constraint firstAttribute="bottom" secondItem="znZ-qg-T39" secondAttribute="bottom" id="wcR-DY-f6F"/>
+                        <constraint firstAttribute="bottom" secondItem="znZ-qg-T39" secondAttribute="bottom" priority="250" id="wcR-DY-f6F"/>
+                        <constraint firstItem="znZ-qg-T39" firstAttribute="centerY" secondItem="n1F-jy-iYK" secondAttribute="centerY" priority="250" id="xf5-JT-g27"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="znZ-qg-T39" firstAttribute="width" secondItem="MOH-We-PZP" secondAttribute="width" id="8Fy-9c-7fi"/>
                 <constraint firstItem="n1F-jy-iYK" firstAttribute="leading" secondItem="h5b-bd-ZWR" secondAttribute="leading" id="eTb-eg-O0t"/>
                 <constraint firstItem="n1F-jy-iYK" firstAttribute="trailing" secondItem="h5b-bd-ZWR" secondAttribute="trailing" id="fxR-Yc-g3y"/>
                 <constraint firstItem="n1F-jy-iYK" firstAttribute="bottom" secondItem="h5b-bd-ZWR" secondAttribute="bottom" id="r1b-sr-Fa4"/>
-                <constraint firstItem="n1F-jy-iYK" firstAttribute="top" secondItem="MOH-We-PZP" secondAttribute="top" id="zbq-dr-rHC"/>
+                <constraint firstItem="n1F-jy-iYK" firstAttribute="top" secondItem="MOH-We-PZP" secondAttribute="top" id="yEh-HB-nOx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="h5b-bd-ZWR"/>
