--- a/cryptoios/cryptoios/ViewControlelrs/Shuihu/Tujian/ShuihuWikiViewController.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Shuihu/Tujian/ShuihuWikiViewController.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShuihuWikiViewController" customModule="cryptoios" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="wOU-wR-n2z" id="TXY-IN-ECB"/>
+                <outlet property="flowLayout" destination="0y2-Uw-EDC" id="nWk-5E-mPJ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,18 +22,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="kEm-u9-dkZ">
-                    <rect key="frame" x="0.0" y="20" width="375" height="29"/>
+                    <rect key="frame" x="20" y="30" width="335" height="29"/>
                     <segments>
                         <segment title="显示所有"/>
                         <segment title="我有的"/>
                         <segment title="我没有的"/>
                     </segments>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <action selector="segmentChanged:" destination="-1" eventType="valueChanged" id="8dz-TX-y7t"/>
                     </connections>
                 </segmentedControl>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="wOU-wR-n2z">
-                    <rect key="frame" x="0.0" y="58" width="375" height="609"/>
+                    <rect key="frame" x="0.0" y="78" width="375" height="589"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0y2-Uw-EDC">
                         <size key="itemSize" width="160" height="260"/>
@@ -50,10 +52,11 @@
             <constraints>
                 <constraint firstItem="wOU-wR-n2z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="0Iv-4Y-6h6"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="wOU-wR-n2z" secondAttribute="trailing" id="5Y6-vS-oLg"/>
-                <constraint firstItem="kEm-u9-dkZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Cq7-8e-Q89"/>
+                <constraint firstItem="kEm-u9-dkZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="Cq7-8e-Q89"/>
                 <constraint firstItem="kEm-u9-dkZ" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="IC1-fx-AuX"/>
-                <constraint firstItem="kEm-u9-dkZ" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="VwH-xy-krb"/>
-                <constraint firstItem="wOU-wR-n2z" firstAttribute="top" secondItem="kEm-u9-dkZ" secondAttribute="bottom" constant="10" id="i8Q-hq-voO"/>
+                <constraint firstItem="kEm-u9-dkZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="OcL-03-mU0"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kEm-u9-dkZ" secondAttribute="trailing" constant="20" id="eTm-4B-NcR"/>
+                <constraint firstItem="wOU-wR-n2z" firstAttribute="top" secondItem="kEm-u9-dkZ" secondAttribute="bottom" constant="20" id="i8Q-hq-voO"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="wOU-wR-n2z" secondAttribute="bottom" id="vsP-qW-i2x"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
