--- a/cryptoios/cryptoios/ViewControlelrs/Shuihu/Tujian/TujianCell.xib
+++ b/cryptoios/cryptoios/ViewControlelrs/Shuihu/Tujian/TujianCell.xib
@@ -12,49 +12,75 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gTV-IL-0wX" customClass="TujianCell" customModule="cryptoios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="160" height="261"/>
+            <rect key="frame" x="0.0" y="0.0" width="160" height="260"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="160" height="261"/>
+                <rect key="frame" x="0.0" y="0.0" width="160" height="260"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="shuihu/card_profile_top" translatesAutoresizingMaskIntoConstraints="NO" id="v3A-2Q-fyL">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shuihu/card_profile_top" translatesAutoresizingMaskIntoConstraints="NO" id="v3A-2Q-fyL">
                         <rect key="frame" x="0.0" y="0.0" width="160" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="e4d-NM-Tk0"/>
+                        </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="shuihu/card_profile" translatesAutoresizingMaskIntoConstraints="NO" id="5Pm-98-eEu">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shuihu/card_profile" translatesAutoresizingMaskIntoConstraints="NO" id="5Pm-98-eEu">
                         <rect key="frame" x="0.0" y="15" width="160" height="188"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="5Pm-98-eEu" secondAttribute="height" multiplier="40:47" id="Q3d-ZC-qKn"/>
+                        </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="shuihu/card_profile_end" translatesAutoresizingMaskIntoConstraints="NO" id="izl-Bz-gek">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shuihu/card_profile_end" translatesAutoresizingMaskIntoConstraints="NO" id="izl-Bz-gek">
                         <rect key="frame" x="0.0" y="202" width="160" height="25"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="TKf-Xg-v0c"/>
+                        </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dwI-RZ-ubb">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shuihu/heros_new/0" translatesAutoresizingMaskIntoConstraints="NO" id="dwI-RZ-ubb">
                         <rect key="frame" x="3" y="15" width="154" height="204"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="dwI-RZ-ubb" secondAttribute="height" multiplier="77:102" id="864-xG-bnd"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-PI-ZTR">
-                        <rect key="frame" x="0.0" y="237" width="159" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-PI-ZTR">
+                        <rect key="frame" x="0.0" y="237" width="159" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.94117647058823528" green="0.72941176470588232" blue="0.20392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="Rlj-PI-ZTR" secondAttribute="trailing" constant="1" id="472-z4-APT"/>
+                <constraint firstAttribute="trailing" secondItem="5Pm-98-eEu" secondAttribute="trailing" id="5PD-Hd-giv"/>
+                <constraint firstItem="5Pm-98-eEu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="7AU-nm-d2v"/>
+                <constraint firstItem="dwI-RZ-ubb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="3" id="Lby-Q3-zoc"/>
+                <constraint firstItem="v3A-2Q-fyL" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="MqR-hW-LQ4"/>
+                <constraint firstAttribute="bottom" secondItem="Rlj-PI-ZTR" secondAttribute="bottom" constant="3" id="NOz-XW-fKy"/>
+                <constraint firstItem="Rlj-PI-ZTR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="RhO-gb-T1j"/>
+                <constraint firstItem="Rlj-PI-ZTR" firstAttribute="top" secondItem="izl-Bz-gek" secondAttribute="bottom" constant="10" id="Y6m-gK-MPU"/>
+                <constraint firstItem="v3A-2Q-fyL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ayu-xH-BnQ"/>
+                <constraint firstItem="izl-Bz-gek" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="bgi-xG-W28"/>
+                <constraint firstAttribute="trailing" secondItem="dwI-RZ-ubb" secondAttribute="trailing" constant="3" id="dgt-8m-dCG"/>
+                <constraint firstItem="izl-Bz-gek" firstAttribute="top" secondItem="5Pm-98-eEu" secondAttribute="bottom" constant="-1" id="dkS-vi-axV"/>
+                <constraint firstItem="dwI-RZ-ubb" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="qzF-DZ-vgv"/>
+                <constraint firstItem="5Pm-98-eEu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="rLs-2k-BTH"/>
+                <constraint firstAttribute="trailing" secondItem="izl-Bz-gek" secondAttribute="trailing" id="sp5-n5-YBk"/>
+                <constraint firstAttribute="trailing" secondItem="v3A-2Q-fyL" secondAttribute="trailing" id="z7a-Ge-Gya"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="159" height="267"/>
+            <size key="customSize" width="159" height="266"/>
             <connections>
                 <outlet property="imageView" destination="dwI-RZ-ubb" id="zqX-zE-dNa"/>
                 <outlet property="titleLabel" destination="Rlj-PI-ZTR" id="NOB-KU-I5Q"/>
             </connections>
-            <point key="canvasLocation" x="216" y="239.73013493253376"/>
+            <point key="canvasLocation" x="216" y="239.28035982008998"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="shuihu/card_profile" width="1602" height="26"/>
         <image name="shuihu/card_profile_end" width="1602" height="99"/>
         <image name="shuihu/card_profile_top" width="1602" height="155"/>
+        <image name="shuihu/heros_new/0" width="618" height="936"/>
     </resources>
 </document>
